--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "express": "~4.8.6",
-    "static-favicon": "~1.0.2",
-    "morgan": "~1.2.3",
-    "cookie-parser": "~1.3.2",
     "body-parser": "~1.6.6",
+    "cookie-parser": "~1.3.2",
     "debug": "~1.0.4",
+    "express": "~4.8.6",
     "jade": "~1.5.0",
+    "morgan": "~1.2.3",
+    "mysql": "^2.4.3",
+    "static-favicon": "~1.0.2",
     "stylus": "~0.48.1"
   }
 }
